[gd_scene load_steps=8 format=3 uid="uid://coll8bs0es03t"]

[ext_resource type="Script" uid="uid://cwo5nsfa32rj" path="res://Scene/SkinShop/skin_shop.gd" id="1_4vjji"]
[ext_resource type="FontFile" uid="uid://dpi3twifidju7" path="res://Fonts/Pangolin-Regular.ttf" id="2_if0kg"]
[ext_resource type="Texture2D" uid="uid://cuqov0qnwvesq" path="res://Sprites/MGE brother/хеви-removebg-preview.png" id="2_mat1r"]
[ext_resource type="Texture2D" uid="uid://7fga7lbqq7xi" path="res://Sprites/wife.jpg" id="3_5tl1g"]
[ext_resource type="Texture2D" uid="uid://bbf4eeqitcv7c" path="res://Sprites/boss.png" id="3_if0kg"]

[sub_resource type="InputEventKey" id="InputEventKey_if0kg"]
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_5tl1g"]
events = [SubResource("InputEventKey_if0kg")]

[node name="SkinShop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4vjji")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 643.0
offset_right = 2146.0
offset_bottom = 1080.0
texture = ExtResource("2_mat1r")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_if0kg")
expand_mode = 1
stretch_mode = 4

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Caption" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 88.0
offset_right = 1920.0
offset_bottom = 187.0
theme_override_fonts/font = ExtResource("2_if0kg")
theme_override_font_sizes/font_size = 100
text = "Skin Shop"
horizontal_alignment = 1

[node name="Money" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 42
text = "Money: 0$"

[node name="SkinTitle" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 730.0
offset_top = 300.0
offset_right = 1190.0
offset_bottom = 372.0
theme_override_font_sizes/font_size = 52
text = "title"
horizontal_alignment = 1

[node name="Skin" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 730.0
offset_top = 368.0
offset_right = 1190.0
offset_bottom = 828.0
texture = ExtResource("3_5tl1g")
expand_mode = 1
stretch_mode = 5

[node name="Price" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 830.0
offset_top = 828.0
offset_right = 1090.0
offset_bottom = 886.0
theme_override_font_sizes/font_size = 42
text = "0$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuyButton" type="Button" parent="Panel"]
z_index = 1
layout_mode = 0
offset_left = 797.0
offset_top = 889.0
offset_right = 1124.0
offset_bottom = 955.0
theme_override_font_sizes/font_size = 42
text = "Купить / Одеть"

[node name="NextButton" type="Button" parent="Panel"]
z_index = 1
layout_mode = 0
offset_left = 1189.0
offset_top = 808.0
offset_right = 1369.0
offset_bottom = 850.0
theme_override_font_sizes/font_size = 42
text = "Следующий"

[node name="PreviousButton" type="Button" parent="Panel"]
z_index = 1
layout_mode = 0
offset_left = 436.0
offset_top = 808.0
offset_right = 730.0
offset_bottom = 874.0
theme_override_font_sizes/font_size = 42
text = "Предыдущий"

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1803.0
offset_top = 1000.0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_font_sizes/font_size = 52
shortcut = SubResource("Shortcut_5tl1g")
text = "Quit"

[connection signal="pressed" from="Panel/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="Panel/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Panel/PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
